# clang-doxygen-gtest-cmake-example

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
ci/: build-with-clang-tidy.sh  build-with-doxygen.sh  build-with-tests.sh  build.sh
cmake/: EnableClangTidy.cmake  EnableDoxygen.cmake
config/: DoxygenLayout.xml
sampleproject/: CMakeLists.txt
sampleproject/include/sampleproject/: sample.h
sampleproject/src/: CMakeLists.txt  sample.cpp
sampleproject/test/: CMakeLists.txt
